<resources>
	<string name="app_name">Giorno</string>
	<string name="record_match">Record Match</string>
	<string name="view_teams">View Teams</string>
	<string name="view_matches">View Matches</string>
	<string name="schedule">Schedule</string>
	<string name="sync">Sync</string>
	<string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="settings_header">Settings</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Scout Name:</string>
    <string name="competition_title">Current Competition:</string>
    <string name="year_title">Current Year:</string>

    <!-- Sync Preferences -->
    <string name="theme_title">Set Dark Theme:</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
