<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center_horizontal"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="75dp"
        tools:layout_editor_absoluteY="235dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            app:srcCompat="@drawable/frclogosmall" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="70dp" />

        <Button
            android:id="@+id/team_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_teams" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <Button
            android:id="@+id/match_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_matches" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <Button
            android:id="@+id/schedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/schedule" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <Button
            android:id="@+id/sync"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="syncActivity"
            android:text="@string/sync" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <Button
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>