<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/settings_header">

        <EditTextPreference
            android:textColor="#234234"
            app:key="scoutName"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true"
           />

        <EditTextPreference
            android:textColor="#234234"
            app:key="year"
            app:title="@string/year_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="null"
            app:entries="@array/competition_entries"
            app:entryValues="@array/competition_values"
            app:key="competition"
            app:title="@string/competition_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

<!--    <PreferenceCategory app:title="@string/sync_header">-->

<!--        <SwitchPreferenceCompat-->
<!--            app:key="Theme"-->
<!--            app:title="@string/theme_title" />-->

<!--&lt;!&ndash;        <SwitchPreferenceCompat&ndash;&gt;-->
<!--&lt;!&ndash;            app:dependency="sync"&ndash;&gt;-->
<!--&lt;!&ndash;            app:key="attachment"&ndash;&gt;-->
<!--&lt;!&ndash;            app:summaryOff="@string/attachment_summary_off"&ndash;&gt;-->
<!--&lt;!&ndash;            app:summaryOn="@string/attachment_summary_on"&ndash;&gt;-->
<!--&lt;!&ndash;            app:title="@string/attachment_title" />&ndash;&gt;-->

<!--    </PreferenceCategory>-->

</PreferenceScreen>
